# HealthCare_Premium_Predictor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: PredictorUtility.py  streamlit.py
model/: model.joblib
src/: main.ipynb
