[project]
name = "healthcare-premium-predictor"
version = "0.1.0"
description = "healthcare Premium Predictor Machine Learning Project"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "joblib==1.5.1",
    "matplotlib>=3.10.6",
    "numpy==2.1.3",
    "pandas==2.3.1",
    "scikit-learn==1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "streamlit==1.49.0",
    "xgboost==3.0.2",
]
